--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=talosIIarchive
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tiendainstrumentos
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/talosII
 spring.datasource.username=kriol
 spring.datasource.password=Taller2014
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
